@@ -1,0 +1,62 @@
+﻿namespace Boilerplate.Wizard.Features
+{
+    using System.Threading.Tasks;
+    using Boilerplate.Wizard.Services;
+
+    public class ReferrerMetaTagFeature : BinaryChoiceFeature
+    {
+        public ReferrerMetaTagFeature(IProjectService projectService)
+             : base(projectService)
+        {
+        }
+
+        public override string Description
+        {
+            get { return "Adds the referrer meta tag to the head element of each HTML page. This tag controls the Referrer HTTP header."; }
+        }
+
+        public override IFeatureGroup Group
+        {
+            get { return FeatureGroups.Other; }
+        }
+
+        public override string Id
+        {
+            get { return "ReferrerMetaTag"; }
+        }
+
+        public override bool IsSelectedDefault
+        {
+            get { return true; }
+        }
+
+        public override bool IsVisible
+        {
+            get { return true; }
+        }
+
+        public override int Order
+        {
+            get { return 4; }
+        }
+
+        public override string Title
+        {
+            get { return "Referrer Meta Tag"; }
+        }
+
+        protected override async Task AddFeature()
+        {
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.LeaveCodeUnchanged, @"Views\Home\About.cshtml");
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.LeaveCodeUnchanged, @"Views\Home\Contact.cshtml");
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.LeaveCodeUnchanged, @"Views\Home\Index.cshtml");
+        }
+
+        protected override async Task RemoveFeature()
+        {
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.DeleteCode, @"Views\Home\About.cshtml");
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.DeleteCode, @"Views\Home\Contact.cshtml");
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.DeleteCode, @"Views\Home\Index.cshtml");
+        }
+    }
+}
