@@ -1,0 +1,94 @@
+﻿namespace Boilerplate.Web.Mvc
+{
+    using System;
+    using System.Net;
+    using System.Runtime.Serialization;
+
+    /// <summary>
+    /// Describes an exception that occurred during the processing of HTTP requests.
+    /// </summary>
+    /// <seealso cref="Exception" />
+#if NET451
+    [Serializable]
+#endif
+    public class HttpException : Exception
+    {
+        private readonly int httpStatusCode;
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="HttpException" /> class.
+        /// </summary>
+        /// <param name="httpStatusCode">The HTTP status code.</param>
+        public HttpException(int httpStatusCode)
+        {
+            this.httpStatusCode = httpStatusCode;
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="HttpException" /> class.
+        /// </summary>
+        /// <param name="httpStatusCode">The HTTP status code.</param>
+        public HttpException(HttpStatusCode httpStatusCode)
+        {
+            this.httpStatusCode = (int)httpStatusCode;
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="HttpException" /> class.
+        /// </summary>
+        /// <param name="httpStatusCode">The HTTP status code.</param>
+        /// <param name="message">The exception message.</param>
+        public HttpException(int httpStatusCode, string message) : base(message)
+        {
+            this.httpStatusCode = httpStatusCode;
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="HttpException" /> class.
+        /// </summary>
+        /// <param name="httpStatusCode">The HTTP status code.</param>
+        /// <param name="message">The exception message.</param>
+        public HttpException(HttpStatusCode httpStatusCode, string message) : base(message)
+        {
+            this.httpStatusCode = (int)httpStatusCode;
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="HttpException" /> class.
+        /// </summary>
+        /// <param name="httpStatusCode">The HTTP status code.</param>
+        /// <param name="message">The exception message.</param>
+        /// <param name="inner">The inner exception.</param>
+        public HttpException(int httpStatusCode, string message, Exception inner) : base(message, inner)
+        {
+            this.httpStatusCode = httpStatusCode;
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="HttpException" /> class.
+        /// </summary>
+        /// <param name="httpStatusCode">The HTTP status code.</param>
+        /// <param name="message">The exception message.</param>
+        /// <param name="inner">The inner exception.</param>
+        public HttpException(HttpStatusCode httpStatusCode, string message, Exception inner) : base(message, inner)
+        {
+            this.httpStatusCode = (int)httpStatusCode;
+        }
+
+#if NET451
+        /// <summary>
+        /// Initializes a new instance of the <see cref="HttpException"/> class.
+        /// </summary>
+        /// <param name="info">The information.</param>
+        /// <param name="context">The context.</param>
+        protected HttpException(
+          SerializationInfo info,
+          StreamingContext context) : base(info, context)
+        {
+            this.httpStatusCode = info.GetInt32(nameof(this.httpStatusCode));
+        }
+#endif
+
+        public int StatusCode { get { return this.httpStatusCode; } }
+    }
+}
